# systems-programming-rust

./: .gitignore  Cargo.toml  README.md
alfa-driver-linux/: Cargo.toml
alfa-driver-linux/src/: lib.rs
gpt-rsx/: .gitignore  Cargo.toml  README.md  gpt-rsx.db
gpt-rsx/data/: input.json  output.json
gpt-rsx/src/: constants.rs  data.rs  db.rs  lib.rs  llm_processing.rs  main.rs  router.rs
gpt-rsx/src/scripts/: py_llama.py
log_color/: Cargo.toml
ml-scraper-rs/: Cargo.toml  README.md
ml-scraper-rs/src/: aws_lambda.rs  dataset_prep.rs  llinfa_ml.rs  main.rs  ml_scraper.rs  mod.rs
ml-scraper-rs/tests/: test_scraper.rs
opencv-rs/: pyproject.toml
opencv-rs/yolo-rs/: Cargo.toml
opencv-rs/yolo-rs/data/: config.json
orion_cli_v2/: Cargo.toml
orion_cli_v2/src/: cmds.rs  lib.rs  logger.rs  main.rs  utils.rs
random-fetcher/: Cargo.toml
random-fetcher/src/: main.rs
rusty-dingo/: .gitignore
rusty-dingo/src/: cracker_db.rs  http_server.rs  main.rs  mod.rs  password_cr.rs  queue_worker.rs  scanner.rs
rusty-dingo/tests/: test_scanner.rs
src/: cracker_db.rs  db.rs  queue_worker.rs  scanner.rs
