[package]
name = "scanner-project-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20.0"
sqlx = {version = "0.8.0", features = ["sqlite", "runtime-tokio-native-tls"] }
futures = "0.3.30"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"
rayon = "1.5"
crypto = "0.5.1"
clap = { version = "4.0" }
colored = "2.0"
chrono = "0.4.38" 
uuid = "1.10.0" 
