[package]
name = "gpt-rsx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.63"
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
warp = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1" }

