[package]
name = "ml-scraper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
aws-sdk-lambda = "1.37.0"
tokio = { version = "1", features = ["full"] }
scraper = "0.19.1"
actix-rt = "2.10.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-bayes = "0.7.0"
linfa-preprocessing = "0.7.0"
serde_json = "1.0.122"

[workspace]
llinfa_ml = { path = "./llinfa_ml.rs" }
aws_lambda = { path = "./aws_lambda.rs" }

