[tool.poetry]
name = "opencv-rs"
version = "0.1.0"
description = "Rust implementation of Yolo Sm"
authors = ["orionhunts-ai <orion@oriondefensiveai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
